# field-data-pipeline

./: .gitignore  README.md  TODO  main.py  pyproject.toml
notebooks/: EDA.ipynb  quickgraph.ipynb
outputs/loadcell_plots/: summary_analysis.txt
scripts/: column_documentation_generator.py  loadcell_visualizer.py
src/: data_merger.py  data_processor.py  flight_segmenter.py  force_validation_plots.py  interactive_dashboard.py
